assets/css/style.css
/* Header */

header {
    padding-bottom: 116px;
    font-family: "Bungee";
}

#game-title {
    padding-right: 1.5em;
    color: #000000;
    text-decoration: none;
}


/* Navigation */

.navbar {
    background-color: rgb(243, 195, 39);
}

.offcanvas-header {
    background-color: rgb(197, 151, 0);
}

.offcanvas-body {
    background-color: rgb(243, 195, 39);
}

/* Main Body */

html {
    background-color: rgb(255, 226, 132); 
}

.gamebody {
    background-color: rgb(255, 226, 132);
}

/*.email-image {
    display:flex;
    justify-content: center;
}*/

#contact-page-title {
    font-family: "Prosto One";
    text-align: center;
}

/* Footer */

footer{
    position:fixed;
    bottom:10px;
    left:0;
    min-width: 100%;
    font-family: "Bungee";
   }

.footer-title {
    font-size: 15px;
    color: black;
    padding-top: 10px;
}

.social-contact {
    background-color: rgb(197, 151, 0);
    padding-bottom: 25px;
    text-align: center;    
}

#socials {
    margin-bottom: 10px;
}

.social-links {
    border-bottom: 20px;
    padding-left: 10px;
    padding-right: 10px;
    color: black;
    font-size: 20px;
}

.social-links:hover {
    color: #c6c6c6;
    transition-duration: 0.4s;
}

#contact-button {
    border-radius: 12px;
    background-color: rgb(197, 151, 0);
    border-color: #c6c6c6;
    transition-duration: 0.4s;
    font-size: 15px;
    margin-bottom: 20px;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
}

#contact-button:hover {
    border-radius: 10px;
    color: #ffffff;
    background-color:#c6c6c6 ;
}

/* Contact Form */

.mcf-surround {
    display: flex;
    justify-content: center;
    padding-top: 1em;
}

#contact-form {
    margin-bottom: 15px;
    max-width: 90%;
    min-width: 60%;
    font-family: "Prosto One";
    border: 1px solid #000000;
    border-radius: 0.25rem;
    padding: 0px;
    text-align: center;
}

.mcf-control {
    width: 75%;
}

.mcf-label {
    width: 75%;
    text-align: left;
}

#mcf-button {
    border: 2px solid #000000;
    border-radius: .25rem;
    background-color: #ffc125;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    width: 75%;
    margin-bottom: 1em;
}

#mcf-button:hover {
    color: #c6c6c6;
    background-color: #202020;
    transition-duration: 0.4s;
}

#developer-surround {
    display: flex;
    justify-content: center;    
}

#developer-info {
    color: #000000;
    font-family: "Righteous";
    text-align: center;
    padding-top: 10px;
    border: 1px solid #000000;
    border-radius: 0.25rem;
    max-width: 90%;
    min-width: 60%;
}

.developer-link {
    border-bottom: 20px;
    padding-left: 10px;
    padding-right: 10px;
    color: black;
    font-size: 60px;
}

.developer-link:hover {
    color: #c6c6c6;
    transition-duration: 0.4s;
}

.developer-name {
    font-size: 20px;
    color: #000000;
    text-decoration: none;
}

#bottom-area {
    margin-bottom: 115px;
}

/* popup for form email confirmation */

.popup {
    width: auto;
    background: rgb(214, 214, 214);
    border-radius: 6px;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%, -50%) scale(0.1);
    text-align: center;
    padding: 0 30px 30px;
    color: #333;
    visibility: hidden;
    transition: transform 0.4s, top 0.4s;
}

.open-EmailConfirm {
    visibility: visible;
    top: 50%;
    transform: translate(-50%, -50%) scale(1);
}

.popup button {
    width: 100%;
    padding: 10px 0;
    background:rgb(243, 195, 39);
    color:#202020;
    border: 0;
    outline: none;
    border-radius: 5px;
    cursor: pointer;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
}

#email-tk-image {
    width: 75px;
    margin-top: -30px;
    border-radius: 25%;
    background: rgb(214, 214, 214, 0.4);
}

/* Game CSS */

.wrapper {
    box-sizing: content-box;
    width: 26.87em;
    padding: 2.5em 3em;
    background-color: #ffffff;
    position: absolute;
    transform: translate(-50%, -50%);
    left: 50%;
    top: 50%;
    border-radius: 0.6em;
    box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
  }
.game-container {
    position: relative;
    width: 100%;
    display: grid;
    gap: 0.6em;
  }
.stats-container {
    text-align: right;
    margin-bottom: 1.2em;
  }
.stats-container span {
    font-weight: 600;
  }
.card-container {
    position: relative;
    width: 6.25em;
    height: 6.25em;
    cursor: pointer;
  }
.card-before,
.card-after {
    position: absolute;
    border-radius: 5px;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 4px solid #000000;
    transition: transform 0.7s ease-out;
    backface-visibility: hidden;
}
.card-before {
    background-color: #f4c531;
    font-size: 2.8em;
    font-weight: 600;
  }
.card-after {
    background-color: #ffffff;
    transform: rotateY(180deg);
  }
.card-container.flipped .card-before {
    transform: rotateY(180deg);
  }

